fix(item): text-alignment

--- a/src/kirby/components/item/item.component.scss
+++ b/src/kirby/components/item/item.component.scss
@@ -16,6 +16,10 @@
       flex-wrap: nowrap;
       text-align: right;
     }
+
+    &[expand='true'] + ion-label {
+      text-align: left;
+    }
   }
 
   ion-label[expand='true'] {
